  + E20F seven wonders of the ancient world by Niklas Kuntz

Redesign / Improvements:
  * 1F990, 1F422, 1F98B Redesign of shrimp, butterfly, and turtle by @RobertWinslow #383
  * 1F458 changed color of Kimono
  * 1FAD9 changed shape of jar and added label
  * 1FAE2 changed shape of hand covering mouth
  * 1FAE4 changed shape mouth

Fix:
  * 1F414 chicken: fixed white fill #359
  * 1F97A pleading face: now more consistent with other platforms by @mincerafter42 #360
  * E0A2 E0A3 E0A4 SOS, YES, NO: color shield was not correctly centered by @tmechen #367
  * Remove problematic id attributes from certain SVG elements by @RobertWinslow #373
  * E2C9 E2CA swapped polar explorer man/woman #390
  * Improved/redesigned: 🏫 1F3EB, 👒 1F452, 🖐️ 1F590, 🥚 1F95A, 🧢 1F9E2, 🧬 1F9EC
    by Jennifer Pätzold, Alan Seng, Niklas Kuntz, Aileen Gedrat

Website:
  * Is completly re-write! Now OpenMoji.org is build with Astro (a static site generator)
    by Stephan Bogner @stephanbogner

--------------------------------------------------------------------------------

⛱🍉 OpenMoji 13.1 - 29 Jun 2021

Many improvements, fixes and new OpenMojis:
👉 Full support of Unicode Emoji 13.1. Yay!
👉 Lots of fixes and redesigns
👉 New flags and misc emojis in extras-openmoji

New:
  + Colorful hexagons by @fuddl #278
  + Annoyed face with tongue by Barkin Simsek @woswos #287
  + Québec flag by Denis Blanchette @dblanchette #293
  + Basque, Bretagne, and anarchist flag by Sam Hocevar @samhocevar #306
  + Unicode 13.1: face in clouds, face-unwell, heart on fire, mending heart,
    "man: beard" and "woman: beard" by Nelly Nieter
  + Champignon Mushroom extras-openmoji/food-drink by Liz Bravo @lizbravob
  + Boule bread extras-openmoji/food-drink by @fuddl

Redesign:
  * Amphora, Pile of Books, Dagger, Teddy Bear, Caterpillar, Lady Beetle, Microscope,
    Mosquito, Cactus, Kimono, Old Man, Guardsaman, Moyai, Mosque, Train Car,