@@ -583,7 +583,7 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 🛒,1F6D2,,Marius Schnabel,2018-04-18
 🔮,1F52E,mystery,Marius Schnabel,2018-04-18
 🪄,1FA84,,Liz Bravo,2020-03-11
-🗿,1F5FF,"stone, easter island",Liz Bravo,2020-12-22
+🗿,1F5FF,"moyai, shibuya, japan, meet, meeting point",Liz Bravo,2022-07-05
 🚬,1F6AC,"tobacco, smoke",Marius Schnabel,2018-04-18
 ⚰️,26B0,"funeral, dead",Marius Schnabel,2018-04-18
 🪦,1FAA6,,Liz Bravo,2020-03-22
