@@ -353,3 +353,4 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,E213,extras-openmoji,travel-places,mausoleum at halicarnassus,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01
 ,E214,extras-openmoji,travel-places,statue of zeus at olympia,"seven wonders of the ancient world, greece",Niklas Kuntz,2022-07-01
 ,E215,extras-openmoji,travel-places,temple of artemis at ephesus,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01
+,E216,extras-openmoji,travel-places,moai,"stone, easter island",Liz Bravo,2022-07-05
