@@ -3139,7 +3139,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ⚰️,26B0,objects,other-object,coffin,death,"funeral, dead",Marius Schnabel,2018-04-18,,,,,1,4119
 🪦,1FAA6,objects,other-object,headstone,"cemetery, grave, graveyard, tombstone",,Liz Bravo,2020-03-22,,,,,13,4120
 ⚱️,26B1,objects,other-object,funeral urn,"ashes, death, funeral, urn",,Marleen Heine,2018-11-16,,,,,1,4122
-🗿,1F5FF,objects,other-object,moai,"face, moyai, statue","stone, easter island",Liz Bravo,2020-12-22,,,,,0.6,4123
+🗿,1F5FF,objects,other-object,moai,"face, moyai, statue","moyai, shibuya, japan, meet, meeting point",Liz Bravo,2022-07-05,,,,,0.6,4123
 🪧,1FAA7,objects,other-object,placard,"demonstration, picket, protest, sign",,Liz Bravo,2020-03-28,,,,,13,4124
 🪪,1FAAA,objects,other-object,identification card,"credentials, id, license, security",,Niklas Kuntz,2022-05-09,,,,,14,4125
 🏧,1F3E7,symbols,transport-sign,ATM sign,"atm, atm sign, automated, bank, teller",,Liz Bravo,2021-05-04,,,,,0.6,4126
@@ -3944,6 +3944,7 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E213,extras-openmoji,travel-places,mausoleum at halicarnassus,,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01,,,,,,
 ,E214,extras-openmoji,travel-places,statue of zeus at olympia,,"seven wonders of the ancient world, greece",Niklas Kuntz,2022-07-01,,,,,,
 ,E215,extras-openmoji,travel-places,temple of artemis at ephesus,,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01,,,,,,
+,E216,extras-openmoji,travel-places,moai,,"stone, easter island",Liz Bravo,2022-07-05,,,,,,
 ,E240,extras-openmoji,ui-element,mark,,,Baris Camli,2018-04-18,,,,,,
 ,E241,extras-openmoji,ui-element,toggle button,,,Baris Camli,2018-04-18,,,,,,
 ,E242,extras-openmoji,ui-element,location indicator,,,Baris Camli,2018-04-18,,,,,,
