@@ -53386,9 +53386,9 @@
     "subgroups": "other-object",
     "annotation": "moai",
     "tags": "face, moyai, statue",
-    "openmoji_tags": "stone, easter island",
+    "openmoji_tags": "moyai, shibuya, japan, meet, meeting point",
     "openmoji_author": "Liz Bravo",
-    "openmoji_date": "2020-12-22",
+    "openmoji_date": "2022-07-05",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -67057,6 +67057,23 @@
     "openmoji_tags": "seven wonders of the ancient world, turkey",
     "openmoji_author": "Niklas Kuntz",
     "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E216",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "moai",
+    "tags": "",
+    "openmoji_tags": "stone, easter island",
+    "openmoji_author": "Liz Bravo",
+    "openmoji_date": "2022-07-05",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
